# PIR-Servo

./: CMakeLists.txt  servo-motor-2.c
